--- a/Razor Example/appsettings.json
+++ b/Razor Example/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection":  "Server=.;Database=CRUD_Razor;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
